syntax = "proto3";

package aiglasses.common;

option python_package = "aiglasses.proto.common";

// Common timestamp message
message Timestamp {
  int64 seconds = 1;
  int32 nanos = 2;
}

// Health status enum
enum HealthStatus {
  HEALTH_STATUS_UNKNOWN = 0;
  HEALTH_STATUS_HEALTHY = 1;
  HEALTH_STATUS_DEGRADED = 2;
  HEALTH_STATUS_UNHEALTHY = 3;
}

// Service health response
message HealthResponse {
  string service_name = 1;
  HealthStatus status = 2;
  string message = 3;
  Timestamp timestamp = 4;
  map<string, string> details = 5;
}

// Empty request/response
message Empty {}

// Generic error
message Error {
  int32 code = 1;
  string message = 2;
  map<string, string> details = 3;
}

// Frame reference for vision operations
message FrameRef {
  string frame_id = 1;
  Timestamp timestamp = 2;
  int32 width = 3;
  int32 height = 4;
  string format = 5;  // "jpeg", "png", "raw"
}

// Bounding box for detections
message BoundingBox {
  float x_min = 1;
  float y_min = 2;
  float x_max = 3;
  float y_max = 4;
}

// Single detection result
message Detection {
  string label = 1;
  float confidence = 2;
  BoundingBox bbox = 3;
  string model_source = 4;  // "imx500", "hailo", "fused"
  map<string, string> attributes = 5;
}

// Permission types
enum Permission {
  PERMISSION_UNKNOWN = 0;
  PERMISSION_CAMERA = 1;
  PERMISSION_MICROPHONE = 2;
  PERMISSION_BLUETOOTH = 3;
  PERMISSION_NETWORK = 4;
  PERMISSION_STORAGE = 5;
  PERMISSION_SYSTEM = 6;
}


